한규5: 카카오톡 로그인 구현완료

--- a/.env.local
+++ b/.env.local
@@ -1,1 +1,11 @@
 VITE_API_BASE_URL=http://localhost:8080
+
+# Kakao JavaScript 키 (카카오 개발자 콘솔의 JavaScript 키를 넣어주세요)
+# 예) VITE_KAKAO_APP_KEY=1234567890abcdef1234567890abcdef
+VITE_KAKAO_APP_KEY=10aa459bbc3339b85efb9ebca581711a
+
+# Dev-only: Kakao REST API key for server-side code exchange (kept on server, not exposed to client)
+KAKAO_REST_KEY=a96dee6080c958153f08d5c7b9740822
+# Optional: if your Kakao app has a client secret, set it here
+KAKAO_CLIENT_SECRET=
+VITE_KAKAO_AUTH_PATH=/auth/kakao
